--- a/src/component/css/Home.css
+++ b/src/component/css/Home.css
@@ -1,20 +1,68 @@
+ul{
+  list-style: none;
+}
 .Home {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color:#F5F5F7 ;
   }
 .register{
     margin-left: 50px;
   }
-  .RegisterButton > button{
-    font-size: 20px; /* 버튼 사이즈 설정 */
-    padding: 10px 10px;/* 버튼 사이즈 설정 */
-    border-radius: 10px; /* 버튼 원형 정도 */
+
+  .Home > .MenuBar {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100vh;
+  }
+  .login, .register{
+    width: 100px;
+    font-weight: bold;
+    font-size: 15px; /* 버튼 사이즈 설정 */
+    padding: 7px 7px;/* 버튼 사이즈 설정 */
+    border-radius: 5px; /* 버튼 원형 정도 */
     border: none; /* 버튼 태두리 제거 */
     color: white; /* 폰트색 흰색 */
-    background-color: black; /* 배경색 검정 */ 
+    background-color: #0069FF; /* 배경색 검정 */ 
     text-align: center; /* 텍스트 중앙 */
     display: inline-block; /* 버튼 형식 inline-block 으로 지정 */
     cursor: pointer; /* 버튼 hover시에 커서변경*/
+    position: absolute;
+    bottom: 0;
+  }
+  .toggleMenu .login {
+    left: 10%;
+    bottom: 10px;
+  }
+  .toggleMenu .register{
+    left: 40%;
+    bottom: 10px;
+  }
+
+  .menu{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    display: inline-block;
+  }
+  .show-menu {
+    width: 300px;
+    height: 500px;
+    position: absolute;
+    left: 0px;
+    transition: 1s;
+    background-color: #ffff; opacity: 0.9;
+    border-radius: 10px;
+    margin-left: 20px;
+    padding-top: 15px;
+    padding-left: 15px;
+  }
+  .hide-menu {
+    width: 300px;
+    height: 500px;
+    position: absolute;
+    left: -376px;
+    transition: 1s;
+    background-color: #ffff;
   }
