--- a/src/component/post/css/WritePost.css
+++ b/src/component/post/css/WritePost.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center; 
-    height: 98vh; /* 내 화면 사이즈임 */
+    height: 100vh; /* 내 화면 사이즈임 */
 }
 
 .post > .title{
@@ -17,10 +17,26 @@
     height: 200px;
     resize: none;
 }
-
+.post > .image_select{
+    margin-top: 20px;
+}
+.post > .image_select > .label_input_file {
+    padding: 10px;
+    font-size: 20px;
+    border-radius: 10px;
+    background-color: orange;
+    color: white;
+    font-weight: bold;
+}
+.post > .image_select > .label_input_file:hover{
+    cursor: pointer;
+}
 .post > .submit {
     font-weight: bold;
     margin-top: 20px;
     width: 50px;
     height: 30px;
+}
+.post > .submit:hover{
+    cursor: pointer;
 }
